--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "webpack-ts example",
-  "version": "0.0.1",
-  "description": "",
+  "name": "webpack-ts-example",
+  "version": "1.0.0",
   "main": "webpack.config.js",
+  "repository": {},
+  "license": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "webpack --watch --optimize-minimize"
+    "start": "webpack --watch --optimize-minimize"
   },
-  "author": "",
-  "license": "ISC",
+
   "devDependencies": {
     "babel-core": "^6.2.1",
     "babel-loader": "^6.2.0",
